2014-10-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STMethodContext.h (+methodContextWithMethod:, initWithMethod:):
    * STMethodContext.m (+methodContextWithMethod:, initWithMethod:):
    * STBytecodeInterpreter.m (-interpretMethod:forReceiver:arguments:):
    Remove unused environment argument from STMethodContext initializer.

2014-10-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSmalltalkScriptObject.m (-forwardInvocation:): Set the return
    value of the invocation object also when the exit pseudo method of the
    script object is called.

2014-10-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (-value:value:):
    * STBlock.m (-value:value:value:):
    Add missing nil terminator to argument list of arrayWithObjects.

2014-09-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-setReceiverVariables:):
    Do not assign a non-mutable array to a mutable array attribute.

2014-09-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiledCode.h (STCompiledCode, -namedReferences,
    -initWithBytecodesData:literals:temporariesCount:stackSize:namedReferences:):
    * STCompiledCode.m (-namedReferences,
    -initWithBytecodesData:literals:temporariesCount:stackSize:namedReferences:):
    Change namedRefs attribute into a non-mutable array.

2014-09-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodeInterpreter.m (-sendSelectorAtIndex:withArgCount:):
    * STCompiler.m (-compileString:, -emitPopAndStoreTemporary:,
	-emitPopAndStoreVariable:, -emitPopAndStoreReceiverVariable:,
	-emitSendSelector:argCount:):
    Fix NSDebugLLog format issues detect by clang.

2013-06-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-lineNumberForIndex:, -readNextToken): Tidy
    source.

    * STSourceReader.m (-readNextToken): Bug fixes:
    - Prevent out of range accesses for the input string.
    - Exponent of a real number must contain at least one digit.
    - Incorrect token range for character literals.